test/sema/lazy_init.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn main(): unit {
    let x: number;
    
    if true {
        x = 2.0;
    } else {
        x = 3.0;
    }

    x;
}

fn modifyImmutable(): unit {
    let x: number = 1.0;
    
    if true {
        // CHECK: [[# @LINE + 1 ]]:11: error: 'x' cannot be mutated
        x = 1.0;
    } else {
        // CHECK: [[# @LINE + 1 ]]:11: error: 'x' cannot be mutated
        x = 2.0;
    }

    // CHECK: [[# @LINE + 1 ]]:7: error: 'x' cannot be mutated
    x = 3.0;
}

fn uninitOneBranch(): unit {
    let x: number;
    
    if true {
        let x: number;
        x = 1.0; // init inner 'x'
    } else {
        x = 2.0;
    }

    // CHECK: [[# @LINE + 1 ]]:5: error: 'x' is not initialized
    x;
}

fn initEveryBranch(): unit {
    mut x: number;
    
    if true {
        x = 1.0;
    } else {
        x = 2.0;
    }

    // CHECK-NOT: [[# @LINE + 1 ]]:5: error
    x;
}

fn initConditionVar(): unit {
    mut x: number;
    
    // CHECK: [[# @LINE + 1 ]]:16: error: 'x' is not initialized
    if true || x > 0 {
        x = 1.0;
    // CHECK: [[# @LINE + 1 ]]:24: error: 'x' is not initialized
    } else if false && x == 2.0 {
        x = 3.0;
    } else {
        x = 2.0;
    }

    // CHECK-NOT: [[# @LINE + 1 ]]:5: error
    x;
}

fn loop(): unit {
    let x: number;
    mut y: number;
    
    while true {
        // CHECK: [[# @LINE + 1 ]]:11: error: 'x' cannot be mutated
        x = 1.0;

        // CHECK-NOT: [[# @LINE + 1 ]]:11: error
        y = 1.0;
    }

    // CHECK: [[# @LINE + 1 ]]:5: error: 'x' is not initialized
    x;
    // CHECK: [[# @LINE + 1 ]]:5: error: 'y' is not initialized
    y;
}

fn shadowInitialization(): unit {
    let x: number;
    
    if true {
        let x: number;
        x = 1.0;
    } else {
        x = 2.0;
    }

    // CHECK: [[# @LINE + 1 ]]:5: error: 'x' is not initialized
    x;
}

fn shadowInitialized(): unit {
    let x: number;
    
    if true {
        x = 1.0;
        let x: number;
        // CHECK: [[# @LINE + 1 ]]:9: error: 'x' is not initialized
        x;
    } else {
        x = 2.0;
    }

    x;
}

fn nestedInLoop(param: number): unit {
    mut x: number;

    if !(param == 0) {
        while !(param == 0) {
            if !(param == 0) {
                x = param - 1.0;
            }

            // CHECK: [[# @LINE + 1 ]]:29: error: 'x' is not initialized
            mut y: number = x;
        }
    } else {
        while !(param == 0) {
            if !(param == 0) {
                x = param - 1.0;
            }

            // CHECK: [[# @LINE + 1 ]]:29: error: 'x' is not initialized
            mut y: number = x;
        }
    }

    // CHECK: [[# @LINE + 2 ]]:5: error: 'x' is not initialized
    // CHECK: [[# @LINE + 1 ]]:9: error: 'x' is not initialized
    x + x;
}
